# superhuman-mail

./: .gitignore  CHANGELOG.md  README.md  SKILL.md  config.example.json  package.json  pyproject.toml  shm
docs/: agent-cli-audit.md  official-superhuman-mcp-beta.md  superhuman-agent-session-endpoints.md  superhuman-ai-endpoints.md  superhuman-api-endpoints.md  superhuman-calendar-endpoints.md  superhuman-crm-endpoints.md  superhuman-knowledge-links-endpoints.md  superhuman-labels-endpoints.md  superhuman-messages-endpoints.md  superhuman-read-statuses.md  superhuman-teams-misc-endpoints.md
scripts/: setup.sh
skills/superhuman-mail/: SKILL.md
superhuman_mail/: __init__.py  __main__.py  _auth.py  _config.py  _envelope.py  _local.py  cli.py  client.py  comment.py  draft.py  opens.py  send.py  setup.py  share.py  thread.py
tests/: test_cli_dispatch.py  test_forward_drafts.py  test_reply_draft_threading.py  test_reply_resolution.py  test_setup_accounts.py  test_smart_send.py  test_version_extraction.py
